--- a/symfony/.env
+++ b/symfony/.env
@@ -7,4 +7,6 @@ APP_SECRET=3fabed916d62ff1c082737652a55141e
 DATABASE_URL=mysql://symfony:symfony@database:3306/symfony
 ###< doctrine/doctrine-bundle ###
 
-BRAND_NAME="my brand"
+###> symfony/mailer ###
+MAILER_DSN=smtp://maildev:25
+###< symfony/mailer ###
