--- a/symfony/.php_cs.dist
+++ b/symfony/.php_cs.dist
@@ -7,18 +7,12 @@ $finder = PhpCsFixer\Finder::create()
 
 return PhpCsFixer\Config::create()
     ->setFinder($finder)
+    ->setRiskyAllowed(true)
     ->setRules([
-        '@Symfony' => true,
-        'array_syntax' => ['syntax' => 'short'],
+        '@Symfony:risky' => true,
         'concat_space' => ['spacing' => 'one'],
         'declare_strict_types' => true,
         'linebreak_after_opening_tag' => true,
-        'native_constant_invocation' => true,
-        'native_function_invocation' => [
-            'include' => ['@compiler_optimized'],
-            'strict' => true,
-        ],
-        'ordered_imports' => true,
         'phpdoc_order' => true,
         'phpdoc_summary' => false,
         'simplified_null_return' => false,
