--- a/symfony/.php_cs.dist
+++ b/symfony/.php_cs.dist
@@ -9,6 +9,7 @@ return PhpCsFixer\Config::create()
     ->setFinder($finder)
     ->setRiskyAllowed(true)
     ->setRules([
+        '@Symfony' => true,
         '@Symfony:risky' => true,
         'concat_space' => ['spacing' => 'one'],
         'declare_strict_types' => true,
