--- a/symfony/config/packages/twig.yaml
+++ b/symfony/config/packages/twig.yaml
@@ -1,4 +1,5 @@
 twig:
+    exception_controller: ~
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
